done with first section spring MVC and using Maps as datastore.

--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>List of Owners</title>
@@ -8,13 +8,13 @@
 
 <h1 th:text="'List of Pet Owners'">List of Pet Owners</h1>
 
-<table>
+<table class="table table-striped">
     <thead>
-        <th>
-            <td>Id</td>
-            <td>Firstname</td>
-            <td>Lastname</td>
-        </th>
+        <tr>
+            <th style="width: 50px;">Id</th>
+            <th style="width: 150px;">Firstname</th>
+            <th style="width: 150px;">Lastname</th>
+        </tr>
     </thead>
     <tbody>
         <tr th:each="owner : ${owners}">
