--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'home')}">
 <head>
     <meta charset="UTF-8">
     <title>Welcome to the Index Page</title>
 </head>
 <body>
-    <h1 th:text="'Index Page'">Index Page</h1>
+    <h2 th:text="#{welcome}">Welcome</h2>
+    <div class="row">
+        <div class="col-md-12">
+            <img class="img-responsive" src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
+        </div>
+    </div>
 <!--Whenerver the name of the static value for thymeleaf is the same as the dynamic value use a single quote as shown above to make the dynamic value reflect else you will have an error --->
 
 </body>
