--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>Vet Page</title>
@@ -7,20 +7,20 @@
 <body>
     <h1 th:text="'List of Vets'">List of Vets...</h1>
 
-    <table>
+    <table class="table table-striped">
         <thead>
-        <th>
-        <td>Id</td>
-        <td>Firstname</td>
-        <td>Lastname</td>
-        </th>
+            <tr>
+                <th style="width: 50px;">Id</th>
+                <th style="width: 50px;">Firstname</th>
+                <th style="width: 50px;">Lastname</th>
+            </tr>
         </thead>
         <tbody>
-        <tr th:each="vet : ${vets}">
-            <td th:text="${vet?.id}"></td>
-            <td th:text="${vet?.firstName}"></td>
-            <td th:text="${vet?.lastName}"></td>
-        </tr>
+            <tr th:each="vet : ${vets}">
+                <td th:text="${vet?.id}"></td>
+                <td th:text="${vet?.firstName}"></td>
+                <td th:text="${vet?.lastName}"></td>
+            </tr>
         </tbody>
     </table>
 </body>
