need to fix the Not_Found bug on the owners/id url

--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
             <img class="img-responsive" src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
         </div>
     </div>
-<!--Whenerver the name of the static value for thymeleaf is the same as the dynamic value use a single quote as shown above to make the dynamic value reflect else you will have an error --->
+<!--Whenever the name of the static value for thymeleaf is the same as the dynamic value use a single quote as shown above to make the dynamic value reflect else you will have an error --->
 
 </body>
 </html>
