--- a/pet-clinic-web/src/main/resources/templates/owners/ownerDetails.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/ownerDetails.html
@@ -46,8 +46,9 @@
             <dt>Name</dt>
             <dd th:text="${pet.name}" /></dd>
             <dt>Birth Date</dt>
-            <dd
-              th:text="${#temporals.format(pet.birthDate, 'yyyy-MM-dd')}" /></dd>
+            <dd th:text="${pet != null ? #temporals.formatDate(pet.birthdate, 'yyyy-MM-dd') : ''}"></dd>
+
+
             <dt>Type</dt>
             <dd th:text="${pet.petType}" /></dd>
           </dl>
@@ -61,7 +62,8 @@
               </tr>
             </thead>
             <tr th:each="visit : ${pet.visits}">
-              <td th:text="${#temporals.format(visit.date, 'yyyy-MM-dd')}"></td>
+              <td th:text="${visit != null ? #temporals.formatDate(visit.date, 'yyyy-MM-dd') : ''}"></td>
+
               <td th:text="${visit?.description}"></td>
             </tr>
             <tr>
